--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+Photo Gallery
+===========================
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Utiliza as seguintes tecnologias:
 
-Things you may want to cover:
+	Ruby on Rails
+	MySQL
+	JavaScript
+	
+Executando a aplicação
+=======================
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Após o download, acesse a pasta da aplicação e execute o comando **make run**, esse comando instalará todas as dependências e na finalização rodará o projeto. Com o projeto iniciado, abra um navegador e acesse o link http://localhost:3000/
